# mproject

./: README.md  setup.cfg
src/mproject/: __init__.py
