[metadata]
name = mproject

[global]
verbose = 0

[egg_info]
egg_base = /tmp

[options]
install_requires =
    furl
    gitpython
    packaging
    setuptools
    toml
    typer[all]
package_dir =
    =src
packages = find:
python_requires = >=3.8

[options.extras_require]
test =
    build
    darling
    icecream
    ipython
    pip-tools
    pytest
    pytest-asyncio
    tox
    wheel
[options.packages.find]
where = src
